[gd_scene load_steps=4 format=3 uid="uid://th61fyk6uifg"]

[ext_resource type="Script" path="res://Scenes/Attack/Attack.gd" id="1_q7xyt"]
[ext_resource type="AudioStream" uid="uid://dece0y3gog0w5" path="res://Assets/Audio/woosh.wav" id="2_0fwm6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hlg47"]
radius = 210.0

[node name="Attack" type="Node2D"]
script = ExtResource("1_q7xyt")

[node name="StickAttackTimer" type="Timer" parent="."]
wait_time = 0.075

[node name="StickTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="Enemy_Detection" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_Detection"]
shape = SubResource("CircleShape2D_hlg47")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="stick_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_0fwm6")

[connection signal="timeout" from="StickAttackTimer" to="." method="_on_stick_attack_timer_timeout"]
[connection signal="timeout" from="StickTimer" to="." method="_on_stick_timer_timeout"]
[connection signal="body_entered" from="Enemy_Detection" to="." method="_on_enemy_detection_body_entered"]
[connection signal="body_exited" from="Enemy_Detection" to="." method="_on_enemy_detection_body_exited"]
